--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <jdk.version>1.8</jdk.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <reactome.graph.core>1.1.9-SNAPSHOT</reactome.graph.core>
+        <reactome.graph.core>1.1.9</reactome.graph.core>
         <reactome.base>1.2.12</reactome.base>
         <jasp.version>2.1</jasp.version>
 
