--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,13 @@
             <version>1.1.3</version>
         </dependency>
 
+        <!-- Mysql connector -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.47</version>
+        </dependency>
+
     </dependencies>
 
     <build>
