--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,8 @@
         <jdk.version>1.8</jdk.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <reactome.graph.core>1.1.18</reactome.graph.core>
-        <reactome.base>1.2.18</reactome.base>
+        <reactome.graph.core>1.1.19-SNAPSHOT</reactome.graph.core>
+        <reactome.base>1.2.19</reactome.base>
         <jasp.version>2.1</jasp.version>
 
         <maven.compiler.version>3.5.1</maven.compiler.version>
@@ -78,14 +78,6 @@
             <artifactId>jdom</artifactId>
             <version>1.1.3</version>
         </dependency>
-
-        <!-- Mysql connector -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.47</version>
-        </dependency>
-
     </dependencies>
 
     <build>
