--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,8 @@
         <jdk.version>1.8</jdk.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <reactome.graph.core>1.1.24-SNAPSHOT</reactome.graph.core>
-        <reactome.base>1.2.21</reactome.base>
+        <reactome.graph.core>1.1.26-SNAPSHOT</reactome.graph.core>
+        <reactome.base>2.1.0-SNAPSHOT</reactome.base>
         <jasp.version>2.1</jasp.version>
 
         <maven.compiler.version>3.5.1</maven.compiler.version>
