--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
 
         <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
         <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
+        <main.class>org.reactome.server.diagram.converter.Main</main.class>
     </properties>
 
     <dependencies>
@@ -121,7 +122,8 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <fork>true</fork>
-                    <mainClass>org.reactome.server.diagram.converter.Main</mainClass>
+                    <mainClass>${main.class}</mainClass>
+                    <classifier>exec</classifier>
                 </configuration>
                 <executions>
                     <execution>
@@ -156,31 +158,6 @@
                         <exclude>**/logback.xml</exclude>
                     </excludes>
                 </configuration>
-            </plugin>
-
-            <!-- Generate jar with dependencies -->
-            <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>${maven-assembly-plugin.version}</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>org.reactome.server.diagram.converter.Main</mainClass>
-                        </manifest>
-                    </archive>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>make-assembly</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
