--- a/pom.xml
+++ b/pom.xml
@@ -31,13 +31,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <main.class>org.reactome.server.diagram.converter.Main</main.class>
 
-        <reactome.graph.core>2.0.3</reactome.graph.core>
+        <reactome.graph.core>2.0.4</reactome.graph.core>
         <reactome.base>2.1.0-SNAPSHOT</reactome.base>
         <jasp.version>2.1</jasp.version>
         <javax.activation.version>1.2.0</javax.activation.version>
-        <jaxb.api.version>2.3.0</jaxb.api.version>
+        <jaxb.core.version>4.0.0</jaxb.core.version>
+        <jaxb.api.version>2.3.1</jaxb.api.version>
 
-        <spring.boot.version>2.6.6</spring.boot.version>
+        <spring.boot.version>2.7.1</spring.boot.version>
         <maven.compiler.version>3.8.1</maven.compiler.version>
         <maven.jar.version>3.2.0</maven.jar.version>
         <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
@@ -94,13 +95,13 @@
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-core</artifactId>
-            <version>${jaxb.api.version}</version>
+            <version>${jaxb.core.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-impl</artifactId>
-            <version>${jaxb.api.version}</version>
+            <version>${jaxb.core.version}</version>
         </dependency>
     </dependencies>
 
