--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
         <dependency>
             <groupId>org.reactome.base</groupId>
             <artifactId>reactome-base</artifactId>
+            <version>2.2.1-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <groupId>commons-httpclient</groupId>
